# roscopter

./: .gitmodules
roscopter/: CMakeLists.txt  package.xml
roscopter/cfg/: Controller.cfg
roscopter/include/controller/: .controller.h.swo  controller.h  controllerPD.h
roscopter/launch/: A01-RaIner_roscopter.launch  auto_takeoff.launch  gene_A01-RaIner_roscopter.launch  load_params.launch  loose_params.launch  rs_params.launch
roscopter/params/: A01-cart_waypoints.yaml  EDGAR_F450.yaml  F450.yaml  F450_subt.yaml  btraj_waypoints.yaml  gene_F450.yaml  radar_waypoints.yaml  trajectories.tar  waypoints.yaml  x_trans.yaml  xy_curve.yaml  xy_trans.yaml  y_btraj_waypoints.yaml
roscopter/src/controller/: backup_double_controller.cpp  compass_controller.cpp  controller.cpp  controllerPD.cpp  original_roscopter_controller.cpp  vins_controller.cpp
roscopter/src/waypoint_manager/: A01_RaIner_HLC.py  btraj_traj_manager.py  btraj_wp_manager.py  btraj_wp_manager_advance.py  gene_waypoint_manager.py  high_level_command_publisher.py  jackal_traj_manager.py  simple_command_pub.py  subt_compass_traj_manager.py  subt_traj_manager.py  subt_vins_traj_manager.py  vel_data.bag
roscopter/src/waypoint_manager/old_code/: btraj_traj_manager.py  btraj_wp_manager.py  simple_command_pub.py  wp_cmd_pub.py
roscopter_msgs/: CMakeLists.txt
roscopter_msgs/srv/: AddMultipleWaypoints.srv  AddWaypoint.srv
