<package format="2">
  <name>roscopter</name>
  <version>1.1.1</version>
  <description>The roscopter package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosflight_msgs</depend>
  <depend>rosflight_utils</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>cmake_modules</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
